; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_scm-exp.c_scm_parse.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_scm-exp.c_scm_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8* }

@lexptr = common dso_local global i8* null, align 8
@USE_EXPRSTRING = common dso_local global i32 0, align 4
@OP_EXPRSTRING = common dso_local global i32 0, align 4
@str = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @scm_parse() #0 {
  %1 = alloca i8*, align 8
  br label %2

2:                                                ; preds = %7, %0
  %3 = load i8*, i8** @lexptr, align 8
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  %6 = icmp eq i32 %5, 32
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i8*, i8** @lexptr, align 8
  %9 = getelementptr inbounds i8, i8* %8, i32 1
  store i8* %9, i8** @lexptr, align 8
  br label %2

10:                                               ; preds = %2
  %11 = load i8*, i8** @lexptr, align 8
  store i8* %11, i8** %1, align 8
  %12 = load i32, i32* @USE_EXPRSTRING, align 4
  %13 = call i32 @scm_lreadr(i32 %12)
  ret i32 0
}

declare dso_local i32 @scm_lreadr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
